Route between creating new colony and homepage

--- a/ClientApp/src/app/homepage/homepage.component.html
+++ b/ClientApp/src/app/homepage/homepage.component.html
@@ -29,5 +29,6 @@
         </tr>
       </tbody>
     </table>
+    <button class="button" routerLink="/new-colony-creation" routerLinkActive="activeButton">New Colony</button>
   </div>
 </ng-template>
