change button formatting

--- a/ClientApp/src/app/new-colony-creation/new-colony-creation.component.html
+++ b/ClientApp/src/app/new-colony-creation/new-colony-creation.component.html
@@ -13,6 +13,6 @@
   <input [(ngModel)]="hiveCount" placeholder="Enter Hive Count" type="number" />
   <br />
   <hr />
-  <button (click)="saveNewColony()">Save</button>
+  <button type="button" class="btn btn-primary" (click)="saveNewColony()">Save</button>
 </div>
 
